--- a/finished/michelle.css
+++ b/finished/michelle.css
@@ -28,7 +28,7 @@ body, html {
 #divider-top {
   width: 100%;
   height: 60%;
-  position: absolute;
+  position: fixed;
   background-color: rgb(241, 154, 39);
 
   display: flex;
@@ -41,7 +41,7 @@ body, html {
   height: 40%;
   border: 1px solid black;
   top: 60%;
-  position: absolute;
+  position: fixed;
   background-color: #154273;
 
   display: flex;
@@ -75,7 +75,7 @@ body, html {
 
 #moving-object {
     position: absolute;
-    width: 100px;
+    width: 5em;
     transition: left 0.5s ease-in-out, top 0.5s ease-in-out, opacity 0.2s ease-in-out;
     z-index: 200;
     left: 2000px;
