--- a/finished/michelle.css
+++ b/finished/michelle.css
@@ -15,6 +15,10 @@ body, html {
     font-family: 'Montserrat', sans-serif;
 }
 
+body {
+  position: relative;
+}
+
 #michelle-app {
     width: 100%;
     height: 100%;
