--- a/finished/michelle.css
+++ b/finished/michelle.css
@@ -5,6 +5,7 @@ body, html {
     min-height: 100%;
 
     /*hide scrollbars*/
+    
     overflow: hidden;
 
     background-color: rgb(135, 170, 236);
@@ -25,13 +26,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 
     background-color: rgb(135, 170, 236);
 }
 
 #divider-top {
   width: 100%;
-  height: 60%;
+  height: 60svh;
   position: fixed;
   background-color: rgb(241, 154, 39);
 
@@ -42,9 +44,9 @@ body {
 
 #divider-bottom {
   width: 100%;
-  height: 40%;
+  height: 40svh;
   border: 1px solid black;
-  top: 60%;
+  top: 60svh;
   position: fixed;
   background-color: #154273;
 
@@ -71,7 +73,7 @@ body {
 #boulder-wall {
     position: relative;
     width: 100%;
-    height: 100vh; /* Adjust the height as needed */
+    height: 100svh; /* Adjust the height as needed */
     background-color: rgb(241, 154, 39); /* Adjust the background color as needed */
 
     transition: all 0.5s ease-in-out;
@@ -134,7 +136,7 @@ opacity: 0.5;
       opacity: 0;
     }
     100% {
-      transform: translateY(calc(100vh - 20px));
+      transform: translateY(calc(100svh - 20px));
       opacity: 1;
     }
 }
