--- a/finished/michelle.css
+++ b/finished/michelle.css
@@ -14,6 +14,8 @@ body, html {
     margin: 0;
 
     font-family: 'Montserrat', sans-serif;
+
+    user-select: none;
 }
 
 body {
@@ -105,29 +107,32 @@ body {
 
 /* Boulder Styles */
 .boulder {
-position: absolute;
-/* Additional styling for the boulders */
-/* Adjust these styles to achieve the desired appearance */
-background-color: #e5ff00; /* Adjust the background color as needed */
-border-radius: 50%; /* Adjust the border radius for a circular shape */
-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); /* Add a box shadow for depth */
-opacity: 0.5;
+  position: absolute;
+  /* Additional styling for the boulders */
+  /* Adjust these styles to achieve the desired appearance */
+  background-color: #e5ff00; /* Adjust the background color as needed */
+  border-radius: 50%; /* Adjust the border radius for a circular shape */
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 1); /* Add a box shadow for depth */
 }
 
 .boulder-fixed {
-    position: absolute;
-    background-color: #000;
-    border-radius: 50%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  position: absolute;
+  background-color: #000;
+  border-radius: 50%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .confetti {
   width: 30px;
   height: 30px;
-  background-color: #ffd700; /* Yellow color */
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%); /*Star shaped*/
   position: absolute;
-  animation: confetti-fall 5s linear forwards;
+}
+
+.confetti-boulder {
+  width: 30px;
+  height: 30px;
+  position: absolute;
 }
 
 @keyframes confetti-fall {
@@ -152,4 +157,22 @@ opacity: 0.5;
 
 .finish-text .sub {
   font-size: 0.5em;
+}
+
+.boulder-indicator {
+  width: 10px;
+  height: 15px;
+  background: purple;
+  position: absolute;
+  z-index: 40;
+  background: yellow;
+  rotate: 45deg;
+  scale: 0.5;
+  padding-top: 40px;
+}
+
+.boulder-indicator.end {
+  width: 40px;
+  height: 20px;
+  background: lightgray;
 }
